# Gamedev.tv-Jam-Cpp-Game

./: .buildme.sh  .gitignore  CMakeLists.txt  glad.c
Engine/: App.cpp  App.hpp  app.cpp  app.hpp
Engine/Datas/: Color.hpp  Vector2.hpp
Engine/EventSystem/: EventDispatcher.hpp
Engine/Events/: Event.cpp  Event.hpp  WindowCloseEvent.cpp  WindowCloseEvent.hpp  WindowCursorPositionEvent.cpp  WindowCursorPositionEvent.hpp  WindowKeyPressedEvent.cpp  WindowKeyPressedEvent.hpp  WindowKeyReleasedEvent.cpp  WindowKeyReleasedEvent.hpp  WindowMouseButtonPressedEvent.cpp  WindowMouseButtonPressedEvent.hpp  WindowMouseButtonReleasedEvent.cpp  WindowMouseButtonReleasedEvent.hpp  WindowResizeEvent.cpp  WindowResizeEvent.hpp
Engine/Renderer/: Renderable.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
Engine/Renderer/LowLevel/: EBO.cpp  EBO.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  VertexArray.cpp  VertexArray.hpp
Engine/Utils/: FileReader.cpp  FileReader.hpp  enginePch.hpp  glfwAliases.hpp
Engine/Utils/Exceptions/: ShaderCompileErrorException.cpp  ShaderCompileErrorException.hpp
Engine/include/: JamEngine.hpp
Shaders/: defaultFragment.jmsh  defaultVertex.jmsh
src/: Object.cpp  Object.hpp  Player.cpp  Player.hpp  main.cpp
